2019-11-26  T.Küchel  <devel@zukuul.de>

	* upstream newer debian:stable-slim

2019-10-21  T.Küchel  <devel@zukuul.de>

	* upstream newest debian:stable-slim

2019-09-25  T.Küchel  <devel@zukuul.de>

	* upstream newest debian:stable-slim

2019-09-03  T. Küchel  <devel@zukuul.de>

	* upstream newest debian:stable-slim

2019-07-23  T. Küchel  <devel@zukuul.de>

	* upstream newest debian:stable-slim (buster)

2019-06-20  T. Küchel  <devel@zukuul.de>

	* update Dockerfile to best practice keeping image small

2019-06-20  T. Küchel  <devel@zukuul.de>

	* add Changelog file
	* add rebuild.sh script
	* bump new upstream parent image
