@@ -1,3 +1,8 @@
+2019-12-03  T.Küchel  <devel@zukuul.de>
+
+	* rebuild.sh refined
+	* name-change of docker-repo to humbihupf/linuxmuster-apt-cacher-ng
+
 2019-11-26  T.Küchel  <devel@zukuul.de>
 
 	* upstream newer debian:stable-slim
